# PromptCompressor

./: .gitignore
prompt-compressor-project/: .gitignore  AGENTS.md  Cargo.toml  README.md  フォルダ構成説明.md
prompt-compressor-project/application/config/: README.md  model-catalog.yaml  runtime-backends.yaml
prompt-compressor-project/application/config/compression-policies/: level-prompt-profiles-v1.yaml
prompt-compressor-project/application/core/compression-core/: Cargo.toml
prompt-compressor-project/application/core/compression-core/src/: error.rs  lib.rs  types.rs
prompt-compressor-project/application/interfaces/cli/: Cargo.toml
prompt-compressor-project/application/interfaces/cli/src/: main.rs
prompt-compressor-project/application/interfaces/mcp/: Cargo.toml
prompt-compressor-project/application/local/: README.md
prompt-compressor-project/application/resources/evaluations/: codex-semantic-regression-v1.json  holdout-generalization-v1.json  level-profile-evaluation-v1.json  raw-long-redundant-evaluation-v1.json  raw-prompts-level2-evaluation-v1.json
prompt-compressor-project/application/resources/evaluations/raw-prompts/: normal-original-prompts-20.txt  unexpected-original-prompts-10.txt
prompt-compressor-project/application/resources/prompts/: code-focused-codex-compression-v1.md  general-codex-compression-v1.md  sarashina-japanese-compression-v1.md
prompt-compressor-project/application/resources/schemas/: compression-request.schema.json
prompt-compressor-project/application/tools/: evaluate-prompt-profiles.ps1  package-desktop-release.ps1  run-raw-level2-real-llm-eval.ps1
prompt-compressor-project/application/ui/desktop/: Cargo.toml  build.rs
prompt-compressor-project/application/ui/desktop/src/: main.rs
prompt-compressor-project/application/ui/launcher/: Cargo.toml  build.rs
prompt-compressor-project/application/ui/launcher/src/: main.rs
prompt-compressor-project/application/ui/web/: Cargo.toml
prompt-compressor-project/application/ui/web/src/: lib.rs  main.rs
prompt-compressor-project/application/ui/web/static/: app.js  index.html  sample-prompts.js  styles.css
prompt-compressor-project/applications/codex-mcp-compressor-server/src/: main.rs
prompt-compressor-project/applications/command-line-compressor/: Cargo.toml
prompt-compressor-project/applications/command-line-compressor/src/: main.rs
prompt-compressor-project/applications/desktop-app-notes/: README.md
prompt-compressor-project/applications/local-web-compressor-ui/: Cargo.toml
prompt-compressor-project/applications/local-web-compressor-ui/src/: main.rs
prompt-compressor-project/applications/local-web-compressor-ui/static/: app.js  index.html  styles.css
prompt-compressor-project/json-schemas/: compression-request.schema.json
prompt-compressor-project/libraries/compression-core/: Cargo.toml
prompt-compressor-project/libraries/compression-core/src/: backend.rs  lib.rs  profile.rs  service.rs  token_estimator.rs  types.rs  verifier.rs
prompt-compressor-project/prompt-templates/: code-focused-codex-compression-v1.md  general-codex-compression-v1.md
prompt-compressor-project/settings/: compression-profiles.yaml  model-catalog.yaml  runtime-backends.yaml
prompt-compressor-project/settings/compression-policies/: balanced-codex-compression-policy-v1.yaml  code-focused-codex-compression-policy-v1.yaml  safe-codex-compression-policy-v1.yaml
prompt-compressor-project/target-cpu-eval/: .rustc_info.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/bindgen-0a9de5d4aacd0fc1/: run-build-script-build-script-build  run-build-script-build-script-build.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/bindgen-657113e7e49cb3de/: dep-lib-bindgen  lib-bindgen  lib-bindgen.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/bindgen-9deb249fec8608d2/: build-script-build-script-build  build-script-build-script-build.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/bitflags-4456a637754220b4/: lib-bitflags  lib-bitflags.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/cc-f37aa8a614507cca/: lib-cc  lib-cc.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/cexpr-599b8126c9b9fe5b/: lib-cexpr  lib-cexpr.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/cfg-if-bfd2cd4de4792f4d/: lib-cfg_if  lib-cfg_if.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/clang-sys-4d6c22ad94e64df1/: build-script-build-script-build  build-script-build-script-build.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/clang-sys-7db87ad2afcf74fd/: run-build-script-build-script-build  run-build-script-build-script-build.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/clang-sys-ceb849a74477ec78/: dep-lib-clang_sys  lib-clang_sys  lib-clang_sys.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/convert_case-f7746dd8a5ab2c7f/: lib-convert_case  lib-convert_case.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/derive_more-2c59bdb6b99407b9/: lib-derive_more  lib-derive_more.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/either-3fc3472dc2ef865e/: lib-either  lib-either.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/equivalent-3a8a5aad6c434f26/: lib-equivalent  lib-equivalent.json
prompt-compressor-project/target-cpu-eval/debug/.fingerprint/glob-78275e0a170544d9/: lib-glob  (+1 more)
prompt-compressor-project/target-cpu-eval/release/: prompt-compressor-cli.d
prompt-compressor-project/企画資料/: Codex用プロジェクト参照.md  Codex起動プロンプト.md  作業リスト.md  市場調査_ローカルプロンプト圧縮.md  進捗状況.md
prompt-compressor-project/資料/: フォルダ構成.md
prompt-compressor-project/資料/企画資料/: Codex用プロジェクト参照.md  Codex起動プロンプト.md  システム設計_ローカルプロンプト圧縮.md  企画書_ローカルプロンプト圧縮.md  作業リスト.md  内部LLM実行方針.md  要件定義_ローカルプロンプト圧縮.md  進捗状況.md
prompt-compressor-project/資料/評価メモ/: 2026-07-22_Codex意味評価反復改善レポート.md  2026-07-22_レベル2圧縮品質改善_完了メモ.md  2026-07-22_実アプリ圧縮差分テストレポート.md  Codex引き継ぎ_レベル2圧縮改善.md  README.md  llama.cpp更新候補_b9982.md  長文冗長入力_レベル2反復評価.md
(+531 files in other folders)
