[workspace]
members = [
  "applications/command-line-compressor",
  "applications/local-web-compressor-ui",
  "applications/codex-mcp-compressor-server",
  "libraries/compression-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
