[workspace]
members = [
  "application/interfaces/cli",
  "application/ui/desktop",
  "application/ui/web",
  "application/core/compression-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
hf-hub = { version = "1.0.0", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Local development runs the embedded CPU model too. Keep application code easy
# to debug while avoiding an artificially slow inference library.
[profile.dev.package.llama_cpp]
opt-level = 3

[profile.dev.package.llama_cpp_sys]
opt-level = 3
