[package]
name = "prompt-compressor-local-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
prompt-compressor-core = { path = "../../libraries/compression-core" }
