[package]
name = "prompt-compressor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["embedded-llama"]
embedded-llama = ["prompt-compressor-core/embedded-llama"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
prompt-compressor-core = { path = "../../core/compression-core", default-features = false }
