[package]
name = "prompt-compressor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "trimprompt"
path = "src/main.rs"

[features]
default = ["embedded-llama-avx2"]
embedded-llama = ["embedded-llama-avx2"]
embedded-llama-compatible = ["prompt-compressor-core/embedded-llama-compatible"]
embedded-llama-avx2 = ["prompt-compressor-core/embedded-llama-avx2"]
embedded-llama-avx512 = ["prompt-compressor-core/embedded-llama-avx512"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
prompt-compressor-core = { path = "../../core/compression-core", default-features = false }
