[package]
name = "prompt-compressor-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
prompt-compressor-local-ui = { path = "../web" }
serde_json.workspace = true
tao = "0.35.3"
wry = "0.55.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
